summary: Descubra las novedades de Amazon FSX para ONTAP de NetApp. 
---
= Novedades de Amazon FSX para ONTAP de NetApp
:hardbreaks:
:allow-uri-read: 
:nofooter: 
:icons: font
:linkattrs: 
:imagesdir: ./media/


[role="lead"]
Descubra las novedades de Amazon FSX para ONTAP de NetApp.



== 07 de mayo de 2023

* Al crear un entorno de trabajo, ahora puedes tener BlueXP link:https://docs.netapp.com/us-en/bluexp-fsx-ontap/use/task-creating-fsx-working-environment.html#create-an-amazon-fsx-for-netapp-ontap-working-environment["generar un grupo de seguridad"^] Esto permite el tráfico dentro de la VPC seleccionada solamente. Esta función link:https://docs.netapp.com/us-en/bluexp-fsx-ontap/requirements/task-setting-up-permissions-fsx.html["requiere permisos adicionales"^].
* Usted puede opcionalmente link:https://docs.netapp.com/us-en/bluexp-fsx-ontap/use/task-add-fsx-volumes.html#create-volumes["agregar"^] y.. link:https://docs.netapp.com/us-en/bluexp-fsx-ontap/use/task-manage-fsx-volumes.html#manage-volume-tags["modificar"^] etiquetas para categorizar volúmenes.




== 02 de abril de 2023

El límite de IOPS se aumenta para permitir el aprovisionamiento manual o automático hasta 160,000.



== 05 de marzo de 2023

Se han realizado mejoras en la interfaz de usuario y se han actualizado las capturas de pantalla en la documentación.



== 01 de enero de 2023

Ahora puede optar por activar link:https://docs.netapp.com/us-en/bluexp-fsx-ontap/use/task-manage-working-environment.html#manage-automatic-capacity["gestión de la capacidad automática"^] para añadir almacenamiento incremental basado en demanda. La administración automática de la capacidad sondea el clúster a intervalos regulares para evaluar la demanda y aumenta automáticamente la capacidad de almacenamiento en incrementos del 10% hasta el 80% de la capacidad máxima del clúster.



== 18 de septiembre de 2022
