@@ -42,7 +42,12 @@ image:screenshot-add-volume.png["Captura de pantalla de la opción Add volume de
 .. El campo Storage VM (SVM) rellena automáticamente la SVM en función del nombre del entorno de trabajo.
 .. Introduzca el tamaño del volumen y seleccione una unidad (GIB o TIB). Tenga en cuenta que el tamaño del volumen crecerá con el uso.
 .. Seleccione una política de Snapshot. De forma predeterminada, se realiza una copia de Snapshot cada hora (manteniendo las últimas seis copias), cada día (manteniendo las dos últimas copias) y cada semana (manteniendo las dos últimas copias).
-.. Opcionalmente, puede crear etiquetas para categorizar los volúmenes haciendo clic en el signo más e introduciendo un nombre y un valor de etiqueta.
+.. Opcionalmente, cree etiquetas para categorizar los volúmenes haciendo clic en el signo más e introduciendo un nombre y un valor de etiqueta.
+.. De manera opcional, seleccione la opción optimización para crear una FlexGroup y distribuir datos de volúmenes en el clúster.
++
+
+NOTE: La distribución de FlexGroup solo está disponible para los protocolos de volúmenes NFS y CIFS.
+
 
 
 . *Protocolo de volúmenes*:
@@ -131,6 +136,7 @@ image:screenshot-volume-protocol-iscsi.png["Una captura de pantalla de la config
 +
 image:screenshot_fsx_volume_usage_tiering.png["Una captura de pantalla del perfil de uso y la configuración de niveles para FSX para la creación de volúmenes de ONTAP."]
 
+.. Si seleccionó Optimization (FlexGroup), debe especificar el número de componentes a los que se deben distribuir los datos de volúmenes en. Se recomienda encarecidamente utilizar un número par de componentes para garantizar una distribución uniforme de los datos.
 
 
 . *Revisión*: Revise su configuración de volumen. Haga clic en *anterior* para cambiar la configuración o en *Agregar* para crear el volumen.
